[gh-pages] Fix for broken footer on mobile.

--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -93,3 +93,9 @@ a {
 		color: #fff;
 	}
 }
+
+@media (max-width: 500px) {
+	#footer {
+		position: relative;
+	}
+ }
